fixed overflow bug

--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -3,6 +3,8 @@
 
 .projects{
     background-color: $color-primary;
+   
+    overflow-x: hidden;
     p{
         
         font-size: 17px;
